2007-11-27  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Don't show the room name as the room description (EJAB-382).

2007-11-26  Badlop  <badlop@process-one.net>

	* src/ejabberd.cfg.example: Added example configuration of databases.

	* doc/guide.tex: Fixed several typos.

	* src/ejabberd_config.erl: Print error when the configuration 
	requires ODBC, MySQL or PostgreSQL libraries but are not 
	installed (EJAB-210).

	* src/web/ejabberd_web_admin.erl: Added a favicon (EJAB-379).

	* src/msgs/wa.msg: New Walon translation (thanks to 
	Pablo Saratxaga) (EJAB-374).

	* doc/guide.tex: Describe how ejabberd treats ejabberd.cfg file
	(EJAB-384).

	* src/ejabberd.cfg.example: Huge reorganization and grouping of 
	options (EJAB-392).

	* doc/guide.tex: Describe in mod_muc: nick register and service 
	admin message (EJAB-400).

	* src/mod_echo.erl: Example function that demonstrates how to 
	receive XMPP packets using Erlang's message passing mechanism 
	(EJAB-247).

	* src/ejabberdctl.template: Removed bashisms (EJAB-399). Set 
	environment variables instead of passing parameters when 
	calling erl (EJAB-421). Write erl_crash.dump in the log/ 
	directory, with unique filename (EJAB-433).

	* src/ejabberd_ctl.erl: Improvements in the help messages 
	(EJAB-399).

	* doc/guide.tex: Improvements in sections ejabberdctl, and 
	Install from Source (EJAB-399).

2007-11-25  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_router.erl: Bugfix

	* src/ejabberd_s2s_out.erl: Bugfix

	* src/ejabberd_sm.erl: Optimized check_max_sessions (thanks to
	Christophe Romain)

2007-11-22  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_config.erl: Improved error message when ejabberd
	config file is not found.

2007-11-16  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_auth_internal.erl: Better count management and
	batch users retrieval internal database

2007-11-14  Mickael Remond  <mremond@process-one.net>
