@@ -1,5 +1,10 @@
 2007-11-27  Badlop  <badlop@process-one.net>
 
+	* src/mod_vcard.erl: Ensure mod_vcard to respect FORM_TYPE registry (EJAB-328).
+	* src/mod_vcard_ldap.erl: Likewise.
+	* src/mod_vcard_odbc.erl: Likewise.
+	* doc/guide.tex: Updated documentation.
+
 	* src/mod_muc/mod_muc_room.erl: Don't show the room name as the room description (EJAB-382).
 
 2007-11-26  Badlop  <badlop@process-one.net>
